html/themes/custom/common_design_subtheme/components/uno-tabs/uno-tabs.css
.uno-tabs [role="tablist"] {
  padding: 0;
}

.uno-tabs [role="tablist"] li,
.uno-tabs [role="tablist"] a {
  display: inline-block;
}

.uno-tabs [role="tablist"] a {
  text-decoration: none;
  padding: 0.5rem 1em;
  position: relative;
  bottom: -3px;
}

.uno-tabs [role="tablist"] [aria-selected] {
  border-bottom: 3px solid var(--brand-primary);
  background: #fff;
  /* border-bottom: 0; */
  position: relative;
  /* top: 3px; */
}

.uno-tabs [role="tabpanel"] {
  border-top: 3px solid var(--brand-grey);
  padding: 1.5rem;
}

.uno-tabs [role="tabpanel"] * + * {
  margin-top: 0.75rem;
}

.uno-tabs *:focus {
  outline: none;
  box-shadow: inset 0 0 0 4px var(--brand-highlight);
}

@media (max-width: 768px) {

  .uno-tabs [role="tablist"] li,
  .uno-tabs [role="tablist"] a {
    display: block;
    position: static;
  }

  .uno-tabs [role="tablist"] a {
    border: 2px solid var(--brand-primary) !important;
  }

  .uno-tabs [role="tablist"] li + li a {
    border-top: 0 !important;
  }

  .uno-tabs [role="tablist"] [aria-selected] {
    position: static;
  }

  .uno-tabs [role="tablist"] [aria-selected]::after {
    content: '\0020⬅';
  }

  .uno-tabs [role="tabpanel"] {
    border-top: 0;
  }
}

.uno-tabs__list {
  margin: 0;
}

.paragraph--type--tab {
  margin: 0;
}

